--- a/Pump-Fitness-Info.plist
+++ b/Pump-Fitness-Info.plist
@@ -2,6 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.512745465972-8ke138qvne19f8c6u0tqjsdh0niodaa9</string>
+			</array>
+		</dict>
+	</array>
+	<key>GIDClientID</key>
+	<string>512745465972-8ke138qvne19f8c6u0tqjsdh0niodaa9.apps.googleusercontent.com</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
