--- a/Pump Fitness.xcodeproj/xcshareddata/xcschemes/Pump Fitness.xcscheme
+++ b/Pump Fitness.xcodeproj/xcshareddata/xcschemes/Pump Fitness.xcscheme
@@ -62,6 +62,9 @@
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
+      <StoreKitConfigurationFileReference
+         identifier = "../../Trackerio.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
