--- a/Pump-Fitness-Info.plist
+++ b/Pump-Fitness-Info.plist
@@ -22,5 +22,7 @@
 		<string>remote-notification</string>
 		<string>location</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Allow saving your shared progress images to Photos.</string>
 </dict>
 </plist>
