--- a/Pump-Fitness-Info.plist
+++ b/Pump-Fitness-Info.plist
@@ -22,5 +22,9 @@
 		<string>remote-notification</string>
 		<string>location</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Allow saving your progress images to Photos.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allow access to photos to save and share your progress.</string>
 </dict>
 </plist>
