--- a/Pump-Fitness-Info.plist
+++ b/Pump-Fitness-Info.plist
@@ -21,6 +21,7 @@
 	<array>
 		<string>remote-notification</string>
 		<string>location</string>
+		<string>audio</string>
 	</array>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>Allow saving your progress images to Photos.</string>
